# orpheusmorebetter

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  orpheusmorebetter  pyproject.toml  release-please-config.json  renovate.json  requirements-dev.txt  requirements.txt  setup.py  start.sh  unraid-template.xml
.github/: dependabot.yml
.github/actions/discord-notify/: action.yml
.github/workflows/: build-and-test.yml  cleanup-and-release.yml  cleanup-releases.yml  devbuild.yml  docker-build.yml  docker-publish.yml  dockerhub-final.yml  logging.yml  release-please.yml  repo-events.yml  stale.yml  sync-and-build.yml  validate-workflows.yml
services/: whatapi.py
