[project]
name = "OrpheusMoreBetter"
version = "1.0.0"
description = "Automatic transcode helper for Orpheus Network"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4,<5.0.0",
    "mutagen>=1.47.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "lxml>=5.4.0,<7.0.0",
    "pydantic>=2.11.5,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/CHODEUS/orpheusmorebetter"
Repository = "https://github.com/CHODEUS/orpheusmorebetter"

[project.scripts]
orpheusmorebetter = "orpheusmorebetter:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-v"]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
