[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OrpheusMoreBetter"
version = "1.0.0"
description = "Automatic transcode helper for Orpheus Network"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3,<5.0.0",
    "mutagen>=1.47.0,<2.0.0",
    "requests>=2.33.1,<3.0.0",
    "lxml>=6.1.0,<7.0.0",
    "pydantic>=2.13.2,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/CHODEUS/orpheusmorebetter"
Repository = "https://github.com/CHODEUS/orpheusmorebetter"

[project.scripts]
orpheusmorebetter = "orpheusmorebetter:main"

[tool.setuptools.packages.find]
include = ["models*", "services*"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-v"]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
